@@ -1,0 +1,27 @@
+# Generated by Django 2.1.7 on 2019-03-08 22:57
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0002_delete_assignment'),
+        ('accounts', '0006_auto_20190305_0125'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='professor',
+            name='courses',
+        ),
+        migrations.RemoveField(
+            model_name='student',
+            name='courses',
+        ),
+        migrations.AddField(
+            model_name='user',
+            name='courses',
+            field=models.ManyToManyField(to='courses.Course'),
+        ),
+    ]
