@@ -1,19 +1,23 @@
 from django import forms
 from .models import Course
+from accounts.models import Professor
 
 
 class CourseAdminCreationForm(forms.ModelForm):
 
 	class Meta:
 		model = Course
-		fields = ('course_name', 'prof', 'students')
+		fields = ('course_name', )
 
 	def save(self, commit=True):
 		# Save the provided password in hashed format
 		course = super(CourseAdminCreationForm, self).save(commit=False)
+		prof = Professor.objects.get(self.prof.id)
+		prof.courses.add(course)
 
 		if commit:
 			course.save()
+			prof.save()
 		return course
 
 
@@ -21,4 +25,4 @@ class CourseAdminChangeForm(forms.ModelForm):
 
 	class Meta:
 		model = Course
-		fields = ('course_name', 'prof', 'students')
+		fields = ('course_name', )
