@@ -1,0 +1,16 @@
+# Generated by Django 2.1.7 on 2019-03-07 06:51
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.DeleteModel(
+            name='Assignment',
+        ),
+    ]
