@@ -1,0 +1,19 @@
+# Generated by Django 2.1.7 on 2019-03-09 17:07
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0002_delete_assignment'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='course',
+            name='prof',
+            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='accounts.Professor'),
+        ),
+    ]
