@@ -1,0 +1,21 @@
+# Generated by Django 2.1.7 on 2019-03-09 20:28
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0003_auto_20190309_1707'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='course',
+            name='prof',
+        ),
+        migrations.RemoveField(
+            model_name='course',
+            name='students',
+        ),
+    ]
