@@ -3,10 +3,9 @@
 {% block content %}
 
     <ul>
+{% for course in  user.courses.all %}
 
-{% for course in user.courses.all %}
-
-        <li><a>{{ course.course_name }}</a>></li>
+        <li><a>{{ course.course_name }}</a></li>
 
 {%  endfor %}
 
